# Kami

./: LICENSE  README.md
.github/workflows/: cicd.yml
docs/: Doxyfile  Doxyfile.bak
docs/html/: annotated.html  annotated_dup.js  classElf-members.html  classElf.html  classElf.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.js  doxygen_crawl.html  elf_8cpp.html  elf_8hpp.html  elf_8hpp.js  elf_8hpp_source.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  main_8cpp.html  menudata.js  namespacereturncodes.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  returncodes_8hpp_source.html  structelf__header32-members.html  structelf__header32.html  structelf__header64-members.html  structelf__header64.html  test_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  enums_0.js  enums_1.js  files_0.js  functions_0.js  namespaces_0.js  searchdata.js  (+1 more)
docs/latex/: annotated.tex  classElf.tex  elf_8cpp.tex  elf_8hpp.tex  elf_8hpp_source.tex  files.tex  main_8cpp.tex  namespacereturncodes.tex  namespaces.tex  refman.tex  returncodes_8hpp_source.tex  structelf__header32.tex  structelf__header64.tex  test_8h_source.tex
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  elf.cpp  elf.hpp  returncodes.hpp  test.cpp  test.h
test/: CMakeLists.txt  atlas_test.cpp  kami_test.cpp
test/bins/: hello
